--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
-  "name": "ninjalist",
+  "name": "next-blog",
+  "homepage": "https://ganeshbirajdar09.github.io/next-blog",
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "lint": "next lint",
+    "replaceFilePaths": "node replacer.js",
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export -o build && npm run replaceFilePaths",
     "start": "next start",
-    "lint": "next lint"
+    "export": "next export -o build && npm run replaceFilePaths",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "gh-pages": "^3.2.3",
     "next": "12.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
