--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "lint": "next lint",
     "replaceFilePaths": "node replacer.js",
     "dev": "next dev",
-    "build": "next build && next export -o build && npm run replaceFilePaths",
+    "build": "next build ",
     "start": "next start",
     "export": "next export -o build && npm run replaceFilePaths",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "dependencies": {
     "gh-pages": "^3.2.3",
-    "next": "12.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "^12.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "eslint": "7.32.0",
